syntax = "proto3";

package {{ package_name }}.shared;

option java_multiple_files = true;
option java_package = "{{ package_name }}.shared";

message RefactoredObjectID {
    string instanceID = 1;
    string classID = 2;
    string serviceID = 3;
}